Se esta complementando el proyecto de ecommerce energia renovable

--- a/Programador front-end/code-together/ecommerce/index.html
+++ b/Programador front-end/code-together/ecommerce/index.html
@@ -17,12 +17,13 @@
     <header>
         <img src="./assets/LOGO.png" alt="Logo de Energia Renovable" width="100">
         <nav>
-            <a href="index.html">Inicio</a>
+            <a href="index.html"><b>Inicio</b></a>
             <a href="products.html">Productos</a>
             <a href="about.html">Sobre Nosotros</a>
             <a href="contact.html">Contacto</a>
         </nav>
     </header>
+
     <main>
         <section class="welcome">
             <h1>Bienvenido a la tienda de Energía Renovable</h1>
@@ -70,6 +71,7 @@
             </article>
         </section>
     </main>
+
     <footer>
         <p>&copy; 2025 Energia Renovable. Todos los derechos reservados.</p>
     </footer>
