--- a/Programador front-end/code-together/ecommerce/about.html
+++ b/Programador front-end/code-together/ecommerce/about.html
@@ -19,8 +19,8 @@
         <nav>
             <a href="index.html">Inicio</a>
             <a href="products.html">Productos</a>
-            <a href="about.html">Sobre Nosotros</a>
-            <a href="contact.html"><b>Contacto</b></a>
+            <a href="about.html"><b>Sobre Nosotros</b></a>
+            <a href="contact.html">Contacto</a>
         </nav>
     </header>
 
